# sgx-keyvault

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: build_and_test.yml
app-libs/stf/: Cargo.toml
app-libs/stf/src/: cli.rs  lib.rs  stf_sgx.rs
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml  demo_create_capsule.sh  demo_scenarios.sh  demo_shielding_unshielding.sh  ternoa-client
client/src/: aes.rs  cipher.rs  main.rs  ternoa_commands.rs  tests.rs
client/src/ternoa_commands/: decrypt.rs  decrypt_shamir.rs  encrypt.rs  mod.rs  nft_create.rs
client/src/ternoa_commands/nft/: common_args_processing.rs  common_arguments.rs  create.rs  mod.rs  mutate.rs  transfer.rs
client/src/ternoa_implementation/: LinesStorageHandler.rs  cipher.rs  decrypt.rs  local_storage_handler.rs  mod.rs  tests.rs
client/src/ternoa_implementation/keyvault/: check.rs  constants.rs  get.rs  get_nft_registry.rs  keyvault_interaction.rs  list.rs  mod.rs  provision.rs  url_storage_handler.rs
client/src/ternoa_implementation/nft/: create.rs  mutate.rs  transfer.rs
core-primitives/api-client-extensions/: Cargo.toml
core-primitives/api-client-extensions/src/: lib.rs  pallet_nfts.rs
core-primitives/enclave-api/ffi/src/: lib.rs
core-primitives/enclave-api/src/: enclave_base.rs  lib.rs  nfts.rs  sidechain.rs
core-primitives/nfts-storage/: Cargo.toml
core-primitives/nfts-storage/src/: lib.rs
core-primitives/ocall-api/src/: lib.rs
core-primitives/settings/src/: lib.rs
core-primitives/sgx/crypto/: Cargo.toml
core-primitives/sgx/io/src/: lib.rs
core-primitives/sgx/nfts/: Cargo.toml
core-primitives/sgx/nfts/src/: error.rs  lib.rs
core-primitives/stf-executor/: Cargo.toml
core-primitives/stf-state-handler/: Cargo.toml
core-primitives/stf-state-handler/src/: file_io.rs
core-primitives/storage/: Cargo.toml
core-primitives/test/: Cargo.toml
core-primitives/test/src/mock/: mod.rs
core-primitives/time-utils/: Cargo.toml
core-primitives/types/: Cargo.toml
core-primitives/types/src/: lib.rs  rpc.rs
core/direct-rpc-server/src/: lib.rs  rpc_connection_registry.rs  rpc_responder.rs  rpc_watch_extractor.rs
core/direct-rpc-server/src/builders/: rpc_response_builder.rs
core/direct-rpc-server/src/mocks/: determine_watch_mock.rs
core/parentchain/block-importer/: Cargo.toml
core/parentchain/block-importer/src/: beefy_merkle_tree.rs  block_importer.rs  error.rs
core/parentchain/parentchain-crate/: Cargo.toml
core/parentchain/parentchain-crate/src/: lib.rs
core/rpc-client/src/: direct_client.rs
core/rpc-server/src/: mock.rs  tests.rs
demo/: README.md  index.js  package-lock.json  package.json
demo-keyvault/: Dockerfile  demo.sh
demo-keyvault/scripts/: start_client.sh  start_node.sh  start_worker.sh
demo-setup/: docker-compose.yml  start.sh
demo-setup/sgx-keyvault/: Dockerfile
demo-setup/ternoa/: Dockerfile
enclave/: Cargo.toml  Enclave.edl
enclave-runtime/: Cargo.toml  Enclave.edl
enclave-runtime/src/: attestation.rs  error.rs  global_components.rs  lib.rs  nfts.rs  tests.rs  top_pool_execution.rs  utils.rs
enclave-runtime/src/ocall/: ffi.rs  mod.rs  on_chain_ocall.rs
enclave-runtime/src/rpc/: worker_api_direct.rs
enclave-runtime/src/test/: mod.rs  sidechain_aura_tests.rs
enclave-runtime/src/test/mocks/: mod.rs  types.rs
enclave/chain_relay/: Cargo.toml
enclave/chain_relay/src/: lib.rs  storage_proof.rs
enclave/src/: attestation.rs  constants.rs  io.rs  keyvault.rs  lib.rs  nft_registry.rs  tests.rs  tls_ra.rs
enclave/src/rpc/: io_handler_extensions.rs  mod.rs  return_value_encoding.rs  rpc_call_encoder.rs  rpc_info.rs  rpc_keyvault_check.rs  rpc_keyvault_get.rs  rpc_keyvault_get_nft_registry.rs  rpc_keyvault_provision.rs  ternoa_rpc_gateway.rs  trusted_operation_verifier.rs  worker_api_direct.rs
enclave/src/rpc/mocks/: dummy_builder.rs  mod.rs  rpc_gateway_mock.rs  trusted_operation_extractor_mock.rs
enclave/src/ternoa/: keyvault.rs  mod.rs  nft_registry.rs  nft_registry_storage_helper.rs
enclave/src/top_pool/: base_pool.rs  pool.rs  ready.rs
local-setup/: README.md  launch.py  run_demo.sh  simple-config.json
local-setup/py/: worker.py
service/: Cargo.toml
service/src/: config.rs  main.rs  request_keys.rs  utils.rs  worker.rs
service/src/globals/: mod.rs
service/src/ocall_bridge/: bridge_api.rs  component_factory.rs
service/src/ocall_bridge/ffi/: get_nft_owner.rs  mod.rs
service/src/tests/: commons.rs  mock.rs  mod.rs  worker.rs
service/src/tests/mocks/: enclave_api_mock.rs  mod.rs  sidechain_api_mock.rs
sidechain/block-composer/: Cargo.toml
sidechain/consensus/aura/: Cargo.toml
sidechain/consensus/aura/src/: block_importer.rs  lib.rs
sidechain/consensus/common/: Cargo.toml
sidechain/state/: Cargo.toml
sidechain/top-pool-executor/: Cargo.toml
sidechain/top-pool-executor/src/: call_operator.rs  lib.rs
stf/: Cargo.toml
stf/src/: cli.rs  lib.rs  sgx.rs
stf/src/cli_utils/: account_parsing.rs  common_operations.rs  common_types.rs  mod.rs
stf/src/commands/: account_details.rs  cancel_order.rs  common_args.rs  common_args_processing.rs  encrypt.rs  get_balance.rs  mod.rs  place_order.rs  test_utils.rs
stf/src/keyvault_commands/: check.rs  get.rs  list.rs  mod.rs  provision.rs
stf/src/top/: mod.rs
substratee-client-primitives/: Cargo.toml
substratee-client-primitives/src/: common_args.rs  common_args_processing.rs  lib.rs
substratee-node-primitives/: Cargo.toml
substratee-node-primitives/src/: lib.rs
substratee-worker-primitives/: Cargo.toml
worker/: Cargo.toml  rust-toolchain
worker/src/: cli.yml  constants.rs  main.rs
worker/src/enclave/: api.rs  tls_ra.rs
worker/src/tests/: commons.rs
worker/worker-api/: Cargo.toml
