[package]
name = "ternoa-client"
version = "0.8.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[dependencies]
log = { version = "0.4" }
env_logger = { version = "0.7"}
hex = { version = "0.4.3" }
json = { version = "0.12.0" }
substrate-bip39 = { version = "0.4.2" }
tiny-bip39 = { version = "0.6.2" }
serde_json = { version = "1.0" }
clap = { version = "2.33" }
clap-nested = { version = "0.3.1" }
primitive-types = { version = "0.10.1", default-features = false, features = ["codec"] }
base58 = { version = "0.1" }
chrono = { version = "*" }
blake2-rfc = { version = "0.2.18", default-features = false}
geojson = { version = "0.17" }
ws = { version = "0.7", features = ["ssl"] }
sgx_crypto_helper = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
aes = { version = "0.6.0" }
ofb = { version = "0.4.0" }
rand = { version = "0.8.4" }
derive_more = { version = "0.99.5" }
sharks = { version = "0.5" }
serde = { version = "1.0", features = ["derive"] }
codec = { version = "2.0.0", package = "parity-scale-codec", features = ["derive"] }

# scs / ternoa
substrate-api-client = { git = "https://github.com/scs/substrate-api-client", features = ["ws-client"], branch = "master" }
substrate-client-keystore = { git = "https://github.com/scs/substrate-api-client", branch = "master" }
my-node-runtime = { git = "https://github.com/capsule-corp-ternoa/chain", package = "ternoa-runtime" }
my-node-primitives = { git = "https://github.com/capsule-corp-ternoa/chain", package = "ternoa-primitives" }
ternoa-pallet-nfts = { git = "https://github.com/capsule-corp-ternoa/chain", package = "ternoa-nfts" }

# substrate dependencies
sp-runtime = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "master" }
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "master" }
sp-keyring = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-application-crypto = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-core = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }

#local dependencies
substratee-worker-primitives = { path = "../substratee-worker-primitives" }
substratee-node-primitives = { path = "../substratee-node-primitives" }
substratee-stf = { path = "../stf" }
substratee-worker-api = { path = "../worker/worker-api" }


[dev-dependencies]
tempfile = { version = "3.2.0" }

#[patch.crates-io]
#ed25519-dalek = { git = "https://github.com/scs/ed25519-dalek.git", branch = "no_std_sgx"}