[package]
name = "substratee-worker-enclave"
version = "0.8.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"
resolver = "2"

[workspace]
members = [
    "chain_relay"
]

[lib]
name = "substratee_worker_enclave"
crate-type = ["staticlib"]

[features]
default = []
production = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tse = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs","net","backtrace"] }
sgx_rand = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tseal = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_serialize = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tunittest = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_serialize_derive = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dependencies]
aes = { version = "0.6.0" }
ofb = { version = "0.4.0" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "full"] }
primitive-types = { version = "0.10.1", default-features = false, features = ["codec", "serde_no_std"] }
sgx-crypto-helper = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", package = "sgx_tcrypto_helper" }
lazy_static = { version = "1.1.0", features = ["spin_no_std"] }
retain_mut = { version = "0.1.2"}
derive_more = { version = "0.99.5" }
byteorder = { version = "1.4.2", default-features = false}
sharks = { version = "0.5", default-features = false }
ipfs-unixfs = { git = "https://github.com/whalelephant/rust-ipfs", branch = "w-nstd", default-features = false }

# for attestation
chrono = { git = "https://github.com/mesalock-linux/chrono-sgx" }
base64 = { rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/rust-base64-sgx" }
num-bigint = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
httparse = { version = "1.3",  default-features = false }
itertools = { version = "0.10.1",  default-features = false, features = []}
bit-vec = { version = "0.6",    default-features = false }
base58 = { rev = "sgx_1.1.3", package="rust-base58", git = "https://github.com/mesalock-linux/rust-base58-sgx", default-features = false, features=["mesalock_sgx"] }

cid = { git = "https://github.com/whalelephant/rust-cid", branch = "nstd", default-features = false }
multibase = { git = "https://github.com/whalelephant/rust-multibase", branch = "nstd", default-features = false }


# mesalock
linked-hash-map = { git = "https://github.com/mesalock-linux/linked-hash-map-sgx" }
webpki = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
webpki-roots = { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
log = { git = "https://github.com/mesalock-linux/log-sgx" }
env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx"}
yasna = { git = "https://github.com/mesalock-linux/yasna.rs-sgx", rev = "sgx_1.1.3", default-features = false, features = ["bit-vec", "num-bigint", "chrono", "mesalock_sgx"] }
rustls = { git = "https://github.com/mesalock-linux/rustls", rev = "sgx_1.1.3", features = ["dangerous_configuration"] }

# scs / ternoa
sp-io = { git = "https://github.com/integritee-network/sgx-runtime", branch = "master",  default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"], optional = true}
substrate-api-client = { git = "https://github.com/scs/substrate-api-client", branch = "master", default-features = false }
sgx-externalities = { git = "https://github.com/integritee-network/sgx-runtime", branch = "master", default-features = false }
my-node-primitives = { git = "https://github.com/capsule-corp-ternoa/chain", package = "ternoa-primitives" }
jsonrpc-core = { git = "https://github.com/scs/jsonrpc", branch = "no_std", default-features = false }

# substrate deps
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "4.0.0-dev", default-features = false, features = ["full_crypto"] }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "4.0.0-dev", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "4.0.0-dev", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "4.0.0-dev", default-features = false }
sp-utils = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-version = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-application-crypto = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }

# local deps
chain-relay = { path = "chain_relay" }
substratee-stf = { path = "../stf", default-features = false,  features = ["sgx"] }
substratee-node-primitives = { path = "../substratee-node-primitives", default-features = false, features = ["sgx"] }
substratee-worker-primitives = { path = "../substratee-worker-primitives", default-features = false, features = ["sgx"] }


[patch.crates-io]
log = { git = "https://github.com/mesalock-linux/log-sgx" }
env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx", default-features = false, features = ["mesalock_sgx"] }

[patch."https://github.com/paritytech/substrate"]
log = { git = "https://github.com/mesalock-linux/log-sgx" }
env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx", default-features = false, features = ["mesalock_sgx"] }
sp-io = { git = "https://github.com/integritee-network/sgx-runtime", branch = "master", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}
