[package]
name = "substratee-stf"
version = "0.8.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[features]
default = ["std"]
sgx = [
    "sgx_tstd",
    "env_logger",
    "log-sgx",
    "sp-io",
    "sgx-runtime",
    "sgx-externalities",
    "derive_more",
    "substratee-worker-primitives",
]
std = [
    "clap",
    "clap-nested",
    "log",
    "base58",
    "sc-keystore",
    "system/std",
    "sp-core/std",
    "hex",
    "substrate-api-client",
    "substrate-client-keystore",
    "my-node-runtime",
]

[dependencies]
log-sgx = { package = "log", git = "https://github.com/mesalock-linux/log-sgx", optional = true }
env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx", optional = true }
clap = { version = "2.33", optional = true }
clap-nested = { version = "0.3.1", optional = true }
log = { version = "0.4", optional = true }
base58 = { version = "0.1", optional = true }
derive_more = { version = "0.99.5", optional = true }
hex = { version = "0.4.3", optional = true }
codec = { version = "2.0.0", package = "parity-scale-codec", features = ["derive"], default-features = false }

sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs", "net", "backtrace"], optional = true }


# Substrate dependencies
balances = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "4.0.0-dev", package = 'pallet-balances', default-features = false }
system = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "4.0.0-dev", package = 'frame-system', default-features = false }
support = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "4.0.0-dev", package = 'frame-support', default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "4.0.0-dev", features = ["full_crypto"], default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "4.0.0-dev", features = ["full_crypto"], default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "4.0.0-dev", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "4.0.0-dev" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "4.0.0-dev", default-features = false, optional = true }

# scs / ternoa
sp-io = { git = "https://github.com/scs/sgx-runtime", branch = "master", version = "4.0.0-dev", optional = true, default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"] }
sgx-runtime = { git = "https://github.com/integritee-network/sgx-runtime", branch = "master",optional = true, default-features = false }
sgx-externalities = { git = "https://github.com/integritee-network/sgx-runtime", default-features = false, branch = "master", optional = true }
substrate-api-client = { git = "https://github.com/scs/substrate-api-client", branch = "master", features = ["ws-client"], optional = true }
substrate-client-keystore = { git = "https://github.com/scs/substrate-api-client", branch = "master", optional = true }
my-node-runtime = { git = "https://github.com/capsule-corp-ternoa/chain", tag = "dev-spec-37", package = "ternoa-runtime", optional = true }
my-node-primitives = { git = "https://github.com/capsule-corp-ternoa/chain", tag = "dev-spec-37", package = "ternoa-primitives", default-features = false}

# Local
substratee-worker-primitives = { path = "../substratee-worker-primitives", default-features = false, features = ["sgx"], optional = true }
