[package]
name = "substratee-node-primitives"
version = "0.8.0"
authors = ["clangenbacher <christian.langenbacher@scs.ch>"]
edition = "2018"

[dependencies]
log = { version = "0.4", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
primitive-types = { version = "0.10.1", default-features = false, features = ["codec"] }
base58 = { version = "0.1", optional = true }

sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs", "net", "backtrace"], optional = true }

my-node-runtime = { git = "https://github.com/capsule-corp-ternoa/chain", package = "ternoa-runtime", optional = true, default-features = false }
my-node-primitives = { git = "https://github.com/capsule-corp-ternoa/chain", package = "ternoa-runtime", default-features = false }

substrate-api-client = { git = "https://github.com/scs/substrate-api-client", features = ["ws-client"], branch = "master", optional = true }

sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master",  version = "4.0.0-dev", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master",  version = "4.0.0-dev", default-features = false }

[features]
default = ['std']
std = [ 'substrate-api-client',
        'my-node-runtime',
        'sp-core/std',
        'base58',
        'log',
        ]
sgx = [ 'sgx_tstd' ]
