[package]
name = "substratee-worker-primitives"
version = "0.8.0"
authors = ["bhaerdi <Bigna.Haerdi@scs.ch>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
primitive-types = { version = "0.10.1", default-features = false, features = ["codec"] }
serde = { version = "1.0", optional = true}
serde_derive = { version = "1.0", optional = true}
serde_json = { version = "1.0", optional = true}
chrono = { version = "0.4.19", default-features = false, features = ["alloc"]}

# sgx deps
sgx_tstd = { rev = "v1.1.3", features = ["untrusted_fs","net","backtrace"], git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

# Substrate
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master",  version = "4.0.0-dev", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master",  version = "4.0.0-dev", default-features = false, features = ["full_crypto"] }

[features]
default = ["std"]
std = [ 'serde',
        'serde_derive',
        'serde_json',]
sgx = [ 'sgx_tstd' ]

[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "4.0.0-dev" }