[package]
name = "substratee-worker"
version = "0.8.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
build = "build.rs"
edition = "2018"

[dependencies]
ws = { version = "0.7" }
hex = { version = "0.4.3" }
log = { version = "0.4" }
env_logger = { version = "0.7"}
base58 = { version = "0.1" }
rust-crypto 			= "0.2"
clap = { version = "2.33", features = [ "yaml" ] }
lazy_static = { version = "1.4.0" }

dirs 					= "1.0.2"
serde = { version = "1.0" }
serde_json = { version = "1.0" }
serde_derive = { version = "1.0" }

# ipfs
ipfs-api				= "0.11.0"
futures					= "0.3"
tokio 					= { version = "0.2", features = ["macros"] }
multihash 				= "0.8"
cid = { version = "<0.3.1" }
sha2 					= { version = "0.7", default-features = false }

codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
primitive-types = { version = "0.10.1", default-features = false, features = ["codec"] }

sgx_urts = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_crypto_helper = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

substrate-api-client = { git = "https://github.com/scs/substrate-api-client", branch = "master" }

# Local
substratee-node-primitives = { path = "../substratee-node-primitives" }
substratee-worker-primitives = { path = "../substratee-worker-primitives" }
substratee-worker-api = { path = "worker-api" }

# Ternoa
my-node-runtime = { git = "https://github.com/capsule-corp-ternoa/chain", package = "ternoa-runtime" }
my-node-primitives = { git = "https://github.com/capsule-corp-ternoa/chain", package = "ternoa-primitives" }
substratee-stf= { path = "../stf" }

# Substrate
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "4.0.0-dev" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "4.0.0-dev" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "4.0.0-dev" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "4.0.0-dev" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "4.0.0-dev" }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "4.0.0-dev" }

[features]
default = []
production = []
