[package]
name = "ternoa-nft-storage"
version = "0.8.0"
authors = ["Timothée Delabrouille <timothee@capsule-corp.io>"]
edition = "2018"
resolver = "2"

[dependencies]
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }

#local deps
itp-storage = { path = "../storage", default-features = false }

[features]
default = ["std"]
std = ["sp-std/std", "itp-storage/std"]
