[package]
name = "itp-test"
version = "0.8.0"
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
    "derive",
] }
derive_more = { version = "0.99.5" }

# sgx deps
sgx_types = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx-crypto-helper = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", package = "sgx_tcrypto_helper", optional = true }
jsonrpc-core_sgx = { package = "jsonrpc-core", git = "https://github.com/scs/jsonrpc", branch = "no_std", default-features = false, optional = true }

# Ternoa / Integritee
sgx-externalities = { default-features = false, git = "https://github.com/capsule-corp-ternoa/sgx-runtime", tag = "SGX-0.0.2", optional = true }
sp-io = { default-features = false, git = "https://github.com/capsule-corp-ternoa/sgx-runtime", tag = "SGX-0.0.2", features = [
    "disable_oom",
    "disable_panic_handler",
    "disable_allocator",
], optional = true }

# std-only deps
jsonrpc-core = { version = "18", optional = true }

# substrate deps
sp-core = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }

# local deps
itp-sgx-crypto = { path = "../sgx/crypto", default-features = false }
itp-teerex-storage = { path = "../teerex-storage", default-features = false }
itp-types = { path = "../types", default-features = false }
itp-ocall-api = { path = "../ocall-api", default-features = false }
itp-storage-verifier = { path = "../storage-verified", default-features = false }
itp-storage = { path = "../storage", default-features = false, features = [
    "test",
] }

[features]
default = ["std"]
std = [
    "codec/std",
    "sgx-externalities/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "itp-sgx-crypto/std",
    "itp-storage/std",
    "itp-teerex-storage/std",
    "itp-types/std",
    "itp-ocall-api/std",
    "itp-storage-verifier/std",
    "jsonrpc-core",
]
sgx = [
    "sp-io/sgx",
    "sgx_tstd",
    "sgx-crypto-helper",
    "itp-sgx-crypto/sgx",
    "jsonrpc-core_sgx",
    "sgx-externalities/sgx",
]
